--- a/form.html
+++ b/form.html
@@ -4,6 +4,8 @@
             .center {
                 margin-left: auto;
                 margin-right: auto;
+                width: 50 %;
+                padding: 20 px;
                 border: lpx solid greenyellow;
             }
         </style>
