--- a/form.html
+++ b/form.html
@@ -11,8 +11,8 @@
         </style>
     </head>
     <BODY bgcolor="# 00AA66">
-        <center><b>申请表</b></center>
         <form class="center">
+            <p><b>申请表</b></p>
             姓名:
             <INPUT type="text" name="name" value="" size="10" readonly="true">
             <p>感兴趣的职位:</p>
